[package]
name = "parity-hash"
version = "1.2.0"
description = "A collection of fixed-size byte array representations"
authors = ["Alexey Frolov <alexey@parity.io>"]
license = "MIT"

[dependencies]
bigint = "4"
rustc-hex = "1.0"
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }

[features]
default = ["std"]
std = ["bigint/std"]
serialize = ["serde", "serde_derive"]
